k8s/argocd/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  annotations:
    tailscale.com/expose: "true"
spec:
  selector:
    app: myapp
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
