k8s/argocd/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: myapp
  annotations:
    tailscale.com/expose: "true"
spec:
  rules:
    - http:
        paths:
          - path: /abc
            pathType: Prefix
            backend:
              service:
                name: myapp-service
                port:
                  number: 8080
